// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyView should render array value 1`] = `
<div>
  <span>
    <span>
      1,2,3
    </span>
  </span>
</div>
`;

exports[`CopyView should render basic string value 1`] = `
<div>
  <span>
    <span>
      hello world
    </span>
  </span>
</div>
`;

exports[`CopyView should render boolean value 1`] = `
<div>
  <span>
    <span>
      true
    </span>
  </span>
</div>
`;

exports[`CopyView should render number value 1`] = `
<div>
  <span>
    <span>
      123
    </span>
  </span>
</div>
`;

exports[`CopyView should render object value 1`] = `
<div>
  <span>
    <span>
      {"name":"John","age":30}
    </span>
  </span>
</div>
`;

exports[`CopyView should render truncated text with short prop 1`] = `
<div>
  <span>
    <span>
      hello
    </span>
  </span>
</div>
`;

exports[`CopyView should render with copy icon when showIcon is true 1`] = `
<div>
  <span>
    <span>
      test
    </span>
    <button
      class="ant-btn css-dev-only-do-not-override-1kf000u ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only antd-restful-copy-button"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </span>
    </button>
  </span>
</div>
`;

exports[`CopyView should render with custom children 1`] = `
<div>
  <span>
    <span>
      <span>
        custom display
      </span>
    </span>
  </span>
</div>
`;

exports[`CopyView should render with custom separator 1`] = `
<div>
  <span>
    <span>
      1 | 2 | 3
    </span>
  </span>
</div>
`;

exports[`CopyView should render with hidden value and copy icon 1`] = `
<div>
  <span>
    <span />
    <button
      class="ant-btn css-dev-only-do-not-override-1kf000u ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only antd-restful-copy-button"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </span>
    </button>
  </span>
</div>
`;
